spikes/exp-cilium-ebpf/k8s/00-demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exp-cilium-ebpf
  labels:
    app.kubernetes.io/part-of: exp-cilium-ebpf
